--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vercel-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DeepForestClub/DFC-api.git"
