--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vercel-api",
+  "name": "DFC-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
@@ -15,6 +15,8 @@
   "homepage": "https://github.com/DeepForestClub/DFC-api",
   "dependencies": {
     "@vercel/node": "^2.9.10",
-    "vercel": "^28.16.12"
+    "vercel": "^28.16.12",
+    "node-fetch": "^2.6.1",
+    "jsdom": "^17.0.0"
   }
 }
