--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "MIT",
   "homepage": "https://github.com/DeepForestClub/DFC-api",
   "dependencies": {
+    "@types/node": "^20.6.1",
     "@vercel/node": "^2.15.10",
+    "axios": "^1.5.0",
+    "cheerio": "^1.0.0-rc.12",
     "jsdom": "^17.0.0",
     "node-fetch": "^2.7.0",
     "vercel": "^28.16.12"
